# somfy-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test-build.yml  tests.yml
docs/: homebrew-setup.md
homebrew/: somfy-cli.rb
scripts/: test-homebrew-locally.sh  update-homebrew-formula.sh
src/: main.rs
src/commands/: cli.rs  dispatcher.rs  executor.rs
src/config/: alias.rs  config.rs  dotenv.rs  loader.rs
src/demos/: demo.rs
src/output/: formatter.rs
src/utils/: poller.rs
