[package]
name = "somfy-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/markusz/somfy-cli"

[[bin]]
name = "somfy"
path = "src/main.rs"

[dependencies]
somfy_sdk = { package = "somfy-sdk", version = "0.2", features = ["generic-exec"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.43", features = ["derive", "env"] }
anyhow = "1.0.98"
tabled = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
dirs = "6.0.0"